--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "4.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "spotify-web-api-js": "^1.5.2"
